--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,9 @@ Title: Mendelian disease variant filtering
 Version: 0.0.0.1
 Authors@R: 
     person("Wei", "Zhou", , "vivizhouxw02@gmail.com", role = c("aut", "cre"),
-           comment = c(GitHub = "vivizhou"))
+           comment = c(GitHub = "https://github.com/vivizhou/MDfilter"))
 Description: The package provides a few functions for family-based genetic variant filtering to identify pathogenic variant for Mendelian diseases.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
